src/components/Player/Player.module.scss
:root {
  --player-background: rgba(0, 0, 0, 0.8);
  --player-button: #fff;
  --player-button-hover: #333;
  --player-button-active: #666;
  --player-text-muted: #bebebe;
}

:root[theme="light"] {
  --player-background: rgba(255, 255, 255, 0.8);
  --player-button: #000000;
  --player-button-hover: #000000;
  --player-button-active: #4e4e4e;
  --player-text-muted: #353535;
}

.player {
  background-color: var(--player-background);
  border-radius: var(--app-border-radius);
  position: absolute;
  bottom: calc(var(--content-offset) * 3.5);
  left: calc(var(--content-offset) * 10);
  width: calc(100% - var(--content-offset) * 13);
  height: 4rem;
  display: flex;
  user-select: none;
  backdrop-filter: blur(10px);
  z-index: 99999999999;

  > * {
    color: var(--text);
  }

  &__left {
    display: flex;
    align-items: center;
    gap: 0.8rem;
    padding: 0 1rem;
    flex: 0.1;
    min-width: 200px;

    &__mediaArt {
      width: 4rem;
      height: 100%;
      border-top-left-radius: var(--app-border-radius);
      border-bottom-left-radius: var(--app-border-radius);
      margin-right: 0.2rem;
      margin-left: -1rem;
    }

    &__mediaInfo {
      display: flex;
      flex-direction: column;
      overflow: hidden;
      white-space: nowrap;
      text-overflow: ellipsis;
      width: 100%;

      &__title {
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
        font-size: var(--font-tiny);
        font-weight: 600;
        width: 100%;
        max-width: max-content;

        &:hover {
          text-decoration: underline;
        }
      }

      &__artist {
        overflow: hidden;
        white-space: nowrap;
        text-overflow: ellipsis;
        font-size: var(--font-micro);
        color: var(--player-text-muted);
        width: 100%;
        max-width: max-content;

        &:hover {
          text-decoration: underline;
        }
      }
    }
  }

  &__middle {
    display: flex;
    align-items: center;
    gap: 1rem;
    flex: 1;
    margin-inline: auto;
    max-width: 50rem;

    &__controls {
      margin-left: 0.2rem;
      display: flex;
      align-items: center;
      gap: 0.2rem;
    }

    &__progress {
      display: flex;
      align-items: center;
      gap: 0.5rem;
      width: 100%;

      &__time {
        font-size: var(--font-micro);
        color: var(--player-text-muted);
        margin-top: -0.1rem;
        max-width: 1.5rem;
        min-width: 1.5rem;
      }

      &__bar {
        width: 100%;
        height: 0.2rem;
        position: relative;

        &::-webkit-slider-thumb {
          -webkit-appearance: none;
          appearance: none;
          width: 0.5rem;
          height: 0.5rem;
          border-radius: 50%;
          background-color: #fff;
          cursor: pointer;
        }
      }
    }
  }

  &__right {
    display: flex;
    align-items: center;
    justify-content: flex-end;
    gap: 1rem;
    padding: 0;
    padding-left: 2rem;
    padding-right: 1rem;
    flex: 0;
    margin-top: 0.1rem;

    &__volume {
      display: flex;
      align-items: center;

      &__button {
        &:hover {
          fill: var(--player-button-hover);
        }

        &:active {
          fill: var(--player-button-active);
        }
      }

      &__bar {
        width: 4rem;
        height: 0.2rem;
        position: relative;
        margin-top: -0.1rem;
        margin-left: -0.4rem;
        border-radius: var(--border-radius);
      }
    }
  }

  .player__button {
    &:hover {
      fill: var(--player-button-hover);
    }

    &:active {
      fill: var(--player-button-active);
    }
  }
}

